--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
+    "bootstrap-social": "^5.1.1",
     "fa-icons": "^0.2.0",
     "firebase": "^7.18.0",
     "font-awesome": "^4.7.0",
@@ -15,6 +16,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-redux-form": "^1.16.14",
+    "react-reveal": "^1.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
