--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-player": "^2.6.1",
     "react-redux": "^7.2.1",
     "react-redux-form": "^1.16.14",
     "react-reveal": "^1.2.2",
